// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template render snapshots > renders cli README with bin path 1`] = `
"# cli-minimal-fixture

TypeScript ESM CLI tool generated by create-yume.

## Scripts

\`\`\`bash
pnpm install
pnpm build
pnpm smoke:bin
\`\`\`

The build output is written to \`dist/index.js\`, with declarations at \`dist/index.d.ts\`.
The package exposes the \`cli-minimal-fixture\` npm bin at \`dist/index.js\`.
"
`;

exports[`template render snapshots > renders cli entry with shebang 1`] = `
"#!/usr/bin/env node

import { realpathSync } from 'node:fs'
import { fileURLToPath } from 'node:url'

interface CliOptions {
  readonly help: boolean
  readonly name: string
}

const usage = \`Usage:
  cli-minimal-fixture [--name <name>]

Options:
  --name <name>  Name to greet
  --help, -h     Show help\`

function parseArgs(args: readonly string[]): CliOptions {
  let name = 'world'

  for (let index = 0; index < args.length; index += 1) {
    const arg = args[index]

    if (arg === '--help' || arg === '-h') {
      return { help: true, name }
    }

    if (arg === '--name') {
      const value = args[index + 1]
      if (value) {
        name = value
        index += 1
      }
      continue
    }

    if (arg?.startsWith('--name=')) {
      name = arg.slice('--name='.length)
    }
  }

  return { help: false, name }
}

export function renderGreeting(name: string): string {
  return \`Hello, \${name}!\`
}

export function run(args: readonly string[] = process.argv.slice(2)): number {
  const options = parseArgs(args)

  if (options.help) {
    console.log(usage)
    return 0
  }

  console.log(renderGreeting(options.name))
  return 0
}

function isDirectRun(metaUrl: string, argvEntry: string | undefined): boolean {
  if (!argvEntry) {
    return false
  }

  try {
    return realpathSync(fileURLToPath(metaUrl)) === realpathSync(argvEntry)
  }
  catch {
    return false
  }
}

if (isDirectRun(import.meta.url, process.argv[1])) {
  process.exitCode = run()
}
"
`;

exports[`template render snapshots > renders cli shebang handler 1`] = `
"import { chmod, readFile, writeFile } from 'node:fs/promises'

const entry = new URL('../dist/index.js', import.meta.url)
const shebang = '#!/usr/bin/env node\\n'
const source = await readFile(entry, 'utf8')

if (!source.startsWith(shebang)) {
  await writeFile(entry, \`\${shebang}\${source.replace(/^#!.*\\n/u, '')}\`)
}

await chmod(entry, 0o755)
"
`;

exports[`template render snapshots > renders eslint config for react 1`] = `
"import antfu from '@antfu/eslint-config'

export default antfu({
  ignores: ['docs/**'],
  react: true,
})
"
`;

exports[`template render snapshots > renders eslint config for vue 1`] = `
"import antfu from '@antfu/eslint-config'

export default antfu({
  ignores: ['docs/**'],
  vue: true,
})
"
`;

exports[`template render snapshots > renders neutral library runtime tsconfig 1`] = `
"{
  "compilerOptions": {
    "target": "ES2023",
    "lib": ["ES2023"],
    "module": "NodeNext",
    "moduleResolution": "NodeNext",
    "moduleDetection": "force",
    "strict": true,
    "declaration": true,
    "outDir": "dist",
    "rootDir": "src",
    "verbatimModuleSyntax": true,
    "skipLibCheck": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedSideEffectImports": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true
  },
  "include": ["src"]
}
"
`;

exports[`template render snapshots > renders node library runtime tsconfig 1`] = `
"{
  "compilerOptions": {
    "target": "ES2023",
    "lib": ["ES2023"],
    "module": "NodeNext",
    "moduleResolution": "NodeNext",
    "moduleDetection": "force",
    "strict": true,
    "declaration": true,
    "outDir": "dist",
    "rootDir": "src",
    "types": ["node"],
    "verbatimModuleSyntax": true,
    "skipLibCheck": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedSideEffectImports": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true
  },
  "include": ["src"]
}
"
`;

exports[`template render snapshots > renders node runtime entry 1`] = `
"import { realpathSync } from 'node:fs'
import { fileURLToPath } from 'node:url'

export function renderMessage(name = 'world'): string {
  return \`Hello, \${name}!\`
}

export function main(args: readonly string[] = process.argv.slice(2)): void {
  const [name] = args
  console.log(renderMessage(name))
}

function isDirectRun(metaUrl: string, argvEntry: string | undefined): boolean {
  if (!argvEntry) {
    return false
  }

  try {
    return realpathSync(fileURLToPath(metaUrl)) === realpathSync(argvEntry)
  }
  catch {
    return false
  }
}

if (isDirectRun(import.meta.url, process.argv[1])) {
  main()
}
"
`;

exports[`template render snapshots > renders node runtime tsconfig 1`] = `
"{
  "compilerOptions": {
    "target": "ES2023",
    "lib": ["ES2023"],
    "module": "NodeNext",
    "moduleResolution": "NodeNext",
    "moduleDetection": "force",
    "strict": true,
    "declaration": true,
    "outDir": "dist",
    "rootDir": "src",
    "types": ["node"],
    "verbatimModuleSyntax": true,
    "skipLibCheck": true,
    "noFallthroughCasesInSwitch": true,
    "noUncheckedSideEffectImports": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true
  },
  "include": ["src"]
}
"
`;

exports[`template render snapshots > renders node runtime tsdown config 1`] = `
"import { defineConfig } from 'tsdown'

export default defineConfig({
  entry: 'src/index.ts',
  outDir: 'dist',
  format: 'esm',
  fixedExtension: false,
  dts: true,
  tsconfig: 'tsconfig.json',
})
"
`;

exports[`template render snapshots > renders react counter component with jotai 1`] = `
"import { useAtom } from 'jotai'
import { countAtom } from '../stores/counter'

export default function Counter() {
  const [count, setCount] = useAtom(countAtom)
  const inc = () => setCount(c => c + 1)
  const dec = () => setCount(c => c - 1)
  return (
    <div className="counter">
      <div className="counter-row">
        <button type="button" className="btn btn-sm" onClick={dec} aria-label="decrement">-</button>
        <span className="count" aria-live="polite">{count}</span>
        <button type="button" className="btn btn-sm" onClick={inc} aria-label="increment">+</button>
      </div>
    </div>
  )
}
"
`;

exports[`template render snapshots > renders react counter component with zustand 1`] = `
"import { useCounterStore } from '../stores/counter'

export default function Counter() {
  const count = useCounterStore(s => s.count)
  const inc = useCounterStore(s => s.inc)
  const dec = useCounterStore(s => s.dec)
  return (
    <div className="counter">
      <div className="counter-row">
        <button type="button" className="btn btn-sm" onClick={dec} aria-label="decrement">-</button>
        <span className="count" aria-live="polite">{count}</span>
        <button type="button" className="btn btn-sm" onClick={inc} aria-label="increment">+</button>
      </div>
    </div>
  )
}
"
`;

exports[`template render snapshots > renders react counter component without state management 1`] = `
"import { useState } from 'react'

export default function Counter() {
  const [count, setCount] = useState(0)
  const inc = () => setCount(c => c + 1)
  const dec = () => setCount(c => c - 1)
  return (
    <div className="counter">
      <div className="counter-row">
        <button type="button" className="btn btn-sm" onClick={dec} aria-label="decrement">-</button>
        <span className="count" aria-live="polite">{count}</span>
        <button type="button" className="btn btn-sm" onClick={inc} aria-label="increment">+</button>
      </div>
    </div>
  )
}
"
`;

exports[`template render snapshots > renders react counter store with jotai 1`] = `
"import { atom } from 'jotai'

export const countAtom = atom<number>(0)
"
`;

exports[`template render snapshots > renders react counter store with zustand 1`] = `
"import { create } from 'zustand'

interface CounterState {
  count: number
  inc: () => void
  dec: () => void
}

export const useCounterStore = create<CounterState>(set => ({
  count: 0,
  inc: () => set(s => ({ count: s.count + 1 })),
  dec: () => set(s => ({ count: s.count - 1 })),
}))
"
`;

exports[`template render snapshots > renders react main with react-router 1`] = `
"import { createRoot } from 'react-dom/client'
import { RouterProvider } from 'react-router-dom'
import router from './router'
import './style.less'

createRoot(document.getElementById('root')!).render(<RouterProvider router={router} />)
"
`;

exports[`template render snapshots > renders react main with tanstack router 1`] = `
"import { createRoot } from 'react-dom/client'
import { RouterProvider } from '@tanstack/react-router'
import router from './router'
import './style.scss'

createRoot(document.getElementById('root')!).render(<RouterProvider router={router} />)
"
`;

exports[`template render snapshots > renders react main without router 1`] = `
"import { createRoot } from 'react-dom/client'
import App from './pages/app'
import './style.scss'

createRoot(document.getElementById('root')!).render(<App />)
"
`;

exports[`template render snapshots > renders react shared style without router-specific config branching 1`] = `
"
@import "tailwindcss";

/* ==== Base & Counter ==== */
.container { max-width: 960px; margin: 0 auto; padding: 0 16px; }
.content { padding: 8px 0; }
h1 { font-size: 22px; margin: 16px 0 8px; }
h2 { font-size: 18px; margin: 14px 0 8px; }
p { margin: 8px 0; }
.block { margin: 12px 0; }
.home { padding: 16px 0; }
.counter { margin: 12px auto; max-width: 320px; }
.counter-row { display: flex; align-items: center; gap: 8px; justify-content: center; }
.count { min-width: 42px; text-align: center; padding: 4px 8px; border: 1px solid #ddd; border-radius: 6px; background: #fff; }
.btn { padding: 6px 10px; border: 1px solid #d0d0d0; background: #fafafa; border-radius: 6px; cursor: pointer; transition: background .15s; }
.btn:hover { background: #f0f0f0; }
.btn.btn-sm { font-size: 14px; }

/* ==== Router (adds navigation & about page) ==== */
.nav { display: flex; gap: 8px; padding: 12px 0; flex-wrap: wrap; }
.nav-link { text-decoration: none; color: inherit; padding: 4px 8px; border-radius: 4px; }
.nav-link:hover { background: #f3f3f3; }
.router-link-active { font-weight: 600; text-decoration: underline; }
.about { padding: 16px 0; }

"
`;

exports[`template render snapshots > renders vite config for react with tailwind 1`] = `
"import tailwindcss from '@tailwindcss/vite'
import react from '@vitejs/plugin-react'
import { defineConfig } from 'vite'

// https://vite.dev/config/
export default defineConfig({
  plugins: [
    react(),
    tailwindcss(),
  ],
  server: {
    host: '127.0.0.1',
    port: 3000,
    open: true,
  },
})
"
`;

exports[`template render snapshots > renders vite config for vue with tailwind 1`] = `
"import tailwindcss from '@tailwindcss/vite'
import vue from '@vitejs/plugin-vue'
import { defineConfig } from 'vite'

// https://vite.dev/config/
export default defineConfig({
  plugins: [
    vue(),
    tailwindcss(),
  ],
  server: {
    host: '127.0.0.1',
    port: 3000,
    open: true,
  },
})
"
`;

exports[`template render snapshots > renders vite config for vue without tailwind 1`] = `
"import vue from '@vitejs/plugin-vue'
import { defineConfig } from 'vite'

// https://vite.dev/config/
export default defineConfig({
  plugins: [
    vue(),
  ],
  server: {
    host: '127.0.0.1',
    port: 3000,
    open: true,
  },
})
"
`;

exports[`template render snapshots > renders vue about with state management 1`] = `
"<template>
  <div class="about">
    <section class="block">
      <h1>About</h1>
      <p>本项目由 create-yume 生成，集成现代化前端工程配置。</p>
    </section>
  </div>
</template>

<style scoped lang="less">
.about { padding: 16px 0; }
.block { margin: 12px 0; }
h1 { font-size: 22px; margin-bottom: 8px; }
h2 { font-size: 18px; margin: 12px 0 8px; }
p { margin: 8px 0; }
</style>
"
`;

exports[`template render snapshots > renders vue about without state management 1`] = `
"<template>
  <div class="about">
    <section class="block">
      <h1>About</h1>
      <p>本项目由 create-yume 生成，集成现代化前端工程配置。</p>
    </section>
  </div>
</template>

<style scoped lang="less">
.about { padding: 16px 0; }
.block { margin: 12px 0; }
h1 { font-size: 22px; margin-bottom: 8px; }
h2 { font-size: 18px; margin: 12px 0 8px; }
p { margin: 8px 0; }
</style>
"
`;

exports[`template render snapshots > renders vue app with router and state management 1`] = `
"<script setup lang="ts">
import { RouterView } from 'vue-router'
</script>

<template>
  <div id="app">
    <main class="container">
      <nav class="nav">
        <RouterLink
          to="/"
          class="nav-link"
        >
          Home
        </RouterLink>
        <RouterLink
          to="/about"
          class="nav-link"
        >
          About
        </RouterLink>
      </nav>

      <section class="content">
        <RouterView />
      </section>
    </main>
  </div>
</template>

<style scoped lang="less">
.container { max-width: 960px; margin: 0 auto; padding: 0 16px; }
.nav { display: flex; gap: 8px; padding: 12px 0; flex-wrap: wrap; }
.nav-link { text-decoration: none; color: inherit; padding: 4px 8px; }
.router-link-active { font-weight: 600; text-decoration: underline; }
.content { padding: 8px 0; }
</style>
"
`;

exports[`template render snapshots > renders vue app without router and state management 1`] = `
"<script setup lang="ts">
import Home from './views/Home.vue'
</script>

<template>
  <div id="app" class="container">
    <Home />
  </div>
</template>

<style scoped lang="scss">
.container { max-width: 960px; margin: 0 auto; padding: 0 16px; }
</style>
"
`;

exports[`template render snapshots > renders vue counter store 1`] = `
"import { defineStore } from 'pinia'
import { computed, ref } from 'vue'

export const useCounterStore = defineStore('counter', () => {
  const count = ref(0)

  const doubleCount = computed(() => count.value * 2)

  function increment() {
    count.value++
  }

  function decrement() {
    count.value--
  }

  return {
    count,
    doubleCount,
    increment,
    decrement,
  }
})
"
`;

exports[`template render snapshots > renders vue counter with state management 1`] = `
"<script setup lang="ts">
import { storeToRefs } from 'pinia'
import { useCounterStore } from '../stores/counter'

const store = useCounterStore()
const { count } = storeToRefs(store)
const inc = store.increment
const dec = store.decrement
</script>

<template>
  <div class="counter">
    <div class="counter-row">
      <button
        type="button"
        class="btn btn-sm"
        aria-label="decrement"
        @click="dec"
      >
        -
      </button>
      <span class="count" aria-live="polite">
        {{ count }}
      </span>
      <button
        type="button"
        class="btn btn-sm"
        aria-label="increment"
        @click="inc"
      >
        +
      </button>
    </div>
  </div>
</template>

<style scoped lang="less">
.counter { margin: 8px auto; max-width: 320px; }
.counter-row { display: flex; align-items: center; gap: 8px; justify-content: center; }
.count { min-width: 40px; text-align: center; padding: 4px 8px; border: 1px solid #ddd; border-radius: 6px; }
.btn { padding: 6px 10px; border: 1px solid #ddd; background: #f7f7f7; border-radius: 6px; cursor: pointer; }
.btn.btn-sm { font-size: 14px; }
</style>
"
`;

exports[`template render snapshots > renders vue counter without state management 1`] = `
"<script setup lang="ts">
import { ref } from 'vue'

const count = ref(0)
const inc = () => { count.value++ }
const dec = () => { count.value-- }
</script>

<template>
  <div class="counter">
    <div class="counter-row">
      <button
        type="button"
        class="btn btn-sm"
        aria-label="decrement"
        @click="dec"
      >
        -
      </button>
      <span class="count" aria-live="polite">
        {{ count }}
      </span>
      <button
        type="button"
        class="btn btn-sm"
        aria-label="increment"
        @click="inc"
      >
        +
      </button>
    </div>
  </div>
</template>

<style scoped lang="less">
.counter { margin: 8px auto; max-width: 320px; }
.counter-row { display: flex; align-items: center; gap: 8px; justify-content: center; }
.count { min-width: 40px; text-align: center; padding: 4px 8px; border: 1px solid #ddd; border-radius: 6px; }
.btn { padding: 6px 10px; border: 1px solid #ddd; background: #f7f7f7; border-radius: 6px; cursor: pointer; }
.btn.btn-sm { font-size: 14px; }
</style>
"
`;

exports[`template render snapshots > renders vue home with state management 1`] = `
"<script setup lang="ts">
import Counter from '../components/Counter.vue'
</script>

<template>
  <div class="home">
    <section class="block">
      <h2>
        counter:
      </h2>
      <Counter />
    </section>
  </div>
</template>

<style scoped lang="less">
.home { padding: 16px 0; }
.block { margin: 12px 0; }
h2 { font-size: 18px; margin-bottom: 8px; }
</style>
"
`;

exports[`template render snapshots > renders vue home without state management 1`] = `
"<script setup lang="ts">
import Counter from '../components/Counter.vue'
</script>

<template>
  <div class="home">
    <section class="block">
      <h2>
        counter:
      </h2>
      <Counter />
    </section>
  </div>
</template>

<style scoped lang="less">
.home { padding: 16px 0; }
.block { margin: 12px 0; }
h2 { font-size: 18px; margin-bottom: 8px; }
</style>
"
`;

exports[`template render snapshots > renders workspace root pnpm workspace 1`] = `
"packages:
  - apps/*
  - libs/*
"
`;

exports[`template render snapshots > renders workspace root turbo config 1`] = `
"{
  "$schema": "https://turborepo.com/schema.json",
  "tasks": {
    "build": {
      "dependsOn": ["^build"],
      "outputs": ["dist/**"]
    },
    "typecheck": {
      "dependsOn": ["^build"]
    },
    "dev": {
      "cache": false,
      "persistent": true
    }
  }
}
"
`;
